Removed old dependencies and added peg

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Michael Alexander"]
 
 [dependencies]
 rand = "^0.3.14"
-nom = "^1.2.2"
-rustc-serialize = "^0.3.19"
 brdgme-game = { path = "../game" }
 brdgme-color = { path = "../color" }
+peg = "^0.3.0"
