--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ rand = "^0.3.14"
 brdgme-game = { path = "../game" }
 brdgme-color = { path = "../color" }
 brdgme-markup = { path = "../markup" }
+brdgme-cmd = { path = "../cmd" }
 peg = "^0.3.0"
