Initial work on nom parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ brdgme-game = { path = "../game" }
 brdgme-color = { path = "../color" }
 brdgme-markup = { path = "../markup" }
 brdgme-cmd = { path = "../cmd" }
-peg = "^0.3.0"
+nom = "^1.2.4"
