--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ brdgme-game = { path = "../game" }
 brdgme-color = { path = "../color" }
 brdgme-markup = { path = "../markup" }
 brdgme-cmd = { path = "../cmd" }
-nom = "^1.2.4"
+combine = "^2.0.0-beta2"
+lazy_static = "^0.2.1"
