--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ brdgme-color = { path = "../color" }
 brdgme-markup = { path = "../markup" }
 brdgme-cmd = { path = "../cmd" }
 combine = "^2.0.0-beta2"
-lazy_static = "^0.2.1"
+serde = "^0.8.6"
+serde_macros = "^0.8.6"
