--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lost-cities"
 version = "0.1.0"
-authors = ["Michael Alexander"]
+authors = ["Michael Alexander <beefsack@gmail.com>"]
 
 [dependencies]
 rand = "^0.3.14"
