--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ brdgme-game = { path = "../game" }
 brdgme-color = { path = "../color" }
 brdgme-markup = { path = "../markup" }
 brdgme-cmd = { path = "../cmd" }
-combine = { git = "https://github.com/Marwes/combine.git" }
+combine = "^2.0.0"
 serde = "^0.8.10"
 serde_derive = "^0.8.10"
