--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: rust
 before_deploy:
-- cargo build --release
+- rustup target add x86_64-unknown-linux-musl
+- cargo build --release --target=x86_64-unknown-linux-musl
 - mkdir lambda
 - cp target/release/lost-cities lambda/game
 - curl https://raw.githubusercontent.com/brdgme/lambda/master/index.js > lambda/index.js
