--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: rust
 before_deploy:
+- curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=$TRAVIS_RUST_VERSION -y
 - rustup target add x86_64-unknown-linux-musl
 - cargo build --release --target=x86_64-unknown-linux-musl
 - mkdir lambda
