Build with muslrust

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-language: rust
-rust: nightly
-before_deploy:
-- cargo build --release
-- mkdir lambda
-- cp target/release/cli lambda/game
-- curl https://raw.githubusercontent.com/brdgme/lambda/master/index.js > lambda/index.js
+
+sudo: required
+services:
+- docker
+script:
+- ./build-release
 deploy:
   provider: lambda
   function_name: lost-cities-2
