Upgrade to Rust 2018

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "lost-cities"
 version = "0.1.0"
 authors = ["Michael Alexander <beefsack@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 brdgme-game = { git = "https://github.com/brdgme/game.git" }
